--- a/Module2/home_work/03_hw.md
+++ b/Module2/home_work/03_hw.md
@@ -23,6 +23,15 @@
 ```python
 # TODO: you code here...
 ```
+x1 = int(input())
+y1 = int(input())
+x2 = int(input())
+y2 = int(input())
+
+if ((x1 + y1) % 2 == 0 and (x2 + y2) % 2 == 0) or ((x1 + y1) % 2 != 0 and (x2 + y2) % 2 != 0):
+    print("YES")
+else:
+    print("NO")
 
 ---
 
