--- a/Module2/home_work/05_hw.md
+++ b/Module2/home_work/05_hw.md
@@ -27,7 +27,16 @@ a = int(input("a: "))
 b = int(input("b: "))
 c = int(input("c: "))
 
-# TODO: you code here...
+if c < b < a:
+    a, c = c, a
+elif b < a < c:
+    a, b = b, a
+elif b < c < a:
+    c, b, a = a, c, b
+elif c < a < b:
+    c, a, b = b, c, a
+elif a < c < b:
+    c, b = b, c
 
 print(a, b, c)
 ```
